; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_string_of_type.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_typegen.c_string_of_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"FC_BYTE\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"FC_CHAR\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"FC_SMALL\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"FC_USMALL\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"FC_WCHAR\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"FC_SHORT\00", align 1
@.str.6 = private unnamed_addr constant [10 x i8] c"FC_USHORT\00", align 1
@.str.7 = private unnamed_addr constant [8 x i8] c"FC_LONG\00", align 1
@.str.8 = private unnamed_addr constant [9 x i8] c"FC_ULONG\00", align 1
@.str.9 = private unnamed_addr constant [9 x i8] c"FC_FLOAT\00", align 1
@.str.10 = private unnamed_addr constant [9 x i8] c"FC_HYPER\00", align 1
@.str.11 = private unnamed_addr constant [10 x i8] c"FC_DOUBLE\00", align 1
@.str.12 = private unnamed_addr constant [10 x i8] c"FC_ENUM16\00", align 1
@.str.13 = private unnamed_addr constant [10 x i8] c"FC_ENUM32\00", align 1
@.str.14 = private unnamed_addr constant [10 x i8] c"FC_IGNORE\00", align 1
@.str.15 = private unnamed_addr constant [18 x i8] c"FC_ERROR_STATUS_T\00", align 1
@.str.16 = private unnamed_addr constant [6 x i8] c"FC_RP\00", align 1
@.str.17 = private unnamed_addr constant [6 x i8] c"FC_UP\00", align 1
@.str.18 = private unnamed_addr constant [6 x i8] c"FC_OP\00", align 1
@.str.19 = private unnamed_addr constant [6 x i8] c"FC_FP\00", align 1
@.str.20 = private unnamed_addr constant [22 x i8] c"FC_ENCAPSULATED_UNION\00", align 1
@.str.21 = private unnamed_addr constant [26 x i8] c"FC_NON_ENCAPSULATED_UNION\00", align 1
@.str.22 = private unnamed_addr constant [10 x i8] c"FC_STRUCT\00", align 1
@.str.23 = private unnamed_addr constant [11 x i8] c"FC_PSTRUCT\00", align 1
@.str.24 = private unnamed_addr constant [11 x i8] c"FC_CSTRUCT\00", align 1
@.str.25 = private unnamed_addr constant [12 x i8] c"FC_CPSTRUCT\00", align 1
@.str.26 = private unnamed_addr constant [12 x i8] c"FC_CVSTRUCT\00", align 1
@.str.27 = private unnamed_addr constant [16 x i8] c"FC_BOGUS_STRUCT\00", align 1
@.str.28 = private unnamed_addr constant [12 x i8] c"FC_SMFARRAY\00", align 1
@.str.29 = private unnamed_addr constant [12 x i8] c"FC_LGFARRAY\00", align 1
@.str.30 = private unnamed_addr constant [12 x i8] c"FC_SMVARRAY\00", align 1
@.str.31 = private unnamed_addr constant [12 x i8] c"FC_LGVARRAY\00", align 1
@.str.32 = private unnamed_addr constant [10 x i8] c"FC_CARRAY\00", align 1
@.str.33 = private unnamed_addr constant [11 x i8] c"FC_CVARRAY\00", align 1
@.str.34 = private unnamed_addr constant [15 x i8] c"FC_BOGUS_ARRAY\00", align 1
@.str.35 = private unnamed_addr constant [11 x i8] c"FC_ALIGNM2\00", align 1
@.str.36 = private unnamed_addr constant [11 x i8] c"FC_ALIGNM4\00", align 1
@.str.37 = private unnamed_addr constant [11 x i8] c"FC_ALIGNM8\00", align 1
@.str.38 = private unnamed_addr constant [11 x i8] c"FC_POINTER\00", align 1
@.str.39 = private unnamed_addr constant [13 x i8] c"FC_C_CSTRING\00", align 1
@.str.40 = private unnamed_addr constant [13 x i8] c"FC_C_WSTRING\00", align 1
@.str.41 = private unnamed_addr constant [11 x i8] c"FC_CSTRING\00", align 1
@.str.42 = private unnamed_addr constant [11 x i8] c"FC_WSTRING\00", align 1
@.str.43 = private unnamed_addr constant [22 x i8] c"FC_BYTE_COUNT_POINTER\00", align 1
@.str.44 = private unnamed_addr constant [15 x i8] c"FC_TRANSMIT_AS\00", align 1
@.str.45 = private unnamed_addr constant [16 x i8] c"FC_REPRESENT_AS\00", align 1
@.str.46 = private unnamed_addr constant [6 x i8] c"FC_IP\00", align 1
@.str.47 = private unnamed_addr constant [16 x i8] c"FC_BIND_CONTEXT\00", align 1
@.str.48 = private unnamed_addr constant [16 x i8] c"FC_BIND_GENERIC\00", align 1
@.str.49 = private unnamed_addr constant [18 x i8] c"FC_BIND_PRIMITIVE\00", align 1
@.str.50 = private unnamed_addr constant [15 x i8] c"FC_AUTO_HANDLE\00", align 1
@.str.51 = private unnamed_addr constant [19 x i8] c"FC_CALLBACK_HANDLE\00", align 1
@.str.52 = private unnamed_addr constant [14 x i8] c"FC_STRUCTPAD1\00", align 1
@.str.53 = private unnamed_addr constant [14 x i8] c"FC_STRUCTPAD2\00", align 1
@.str.54 = private unnamed_addr constant [14 x i8] c"FC_STRUCTPAD3\00", align 1
@.str.55 = private unnamed_addr constant [14 x i8] c"FC_STRUCTPAD4\00", align 1
@.str.56 = private unnamed_addr constant [14 x i8] c"FC_STRUCTPAD5\00", align 1
@.str.57 = private unnamed_addr constant [14 x i8] c"FC_STRUCTPAD6\00", align 1
@.str.58 = private unnamed_addr constant [14 x i8] c"FC_STRUCTPAD7\00", align 1
@.str.59 = private unnamed_addr constant [16 x i8] c"FC_STRING_SIZED\00", align 1
@.str.60 = private unnamed_addr constant [13 x i8] c"FC_NO_REPEAT\00", align 1
@.str.61 = private unnamed_addr constant [16 x i8] c"FC_FIXED_REPEAT\00", align 1
@.str.62 = private unnamed_addr constant [19 x i8] c"FC_VARIABLE_REPEAT\00", align 1
@.str.63 = private unnamed_addr constant [16 x i8] c"FC_FIXED_OFFSET\00", align 1
@.str.64 = private unnamed_addr constant [19 x i8] c"FC_VARIABLE_OFFSET\00", align 1
@.str.65 = private unnamed_addr constant [6 x i8] c"FC_PP\00", align 1
@.str.66 = private unnamed_addr constant [20 x i8] c"FC_EMBEDDED_COMPLEX\00", align 1
@.str.67 = private unnamed_addr constant [15 x i8] c"FC_DEREFERENCE\00", align 1
@.str.68 = private unnamed_addr constant [9 x i8] c"FC_DIV_2\00", align 1
@.str.69 = private unnamed_addr constant [10 x i8] c"FC_MULT_2\00", align 1
@.str.70 = private unnamed_addr constant [9 x i8] c"FC_ADD_1\00", align 1
@.str.71 = private unnamed_addr constant [9 x i8] c"FC_SUB_1\00", align 1
@.str.72 = private unnamed_addr constant [12 x i8] c"FC_CALLBACK\00", align 1
@.str.73 = private unnamed_addr constant [16 x i8] c"FC_CONSTANT_IID\00", align 1
@.str.74 = private unnamed_addr constant [7 x i8] c"FC_END\00", align 1
@.str.75 = private unnamed_addr constant [7 x i8] c"FC_PAD\00", align 1
@.str.76 = private unnamed_addr constant [16 x i8] c"FC_USER_MARSHAL\00", align 1
@.str.77 = private unnamed_addr constant [9 x i8] c"FC_RANGE\00", align 1
@.str.78 = private unnamed_addr constant [11 x i8] c"FC_INT3264\00", align 1
@.str.79 = private unnamed_addr constant [12 x i8] c"FC_UINT3264\00", align 1
@.str.80 = private unnamed_addr constant [37 x i8] c"string_of_type: unknown type 0x%02x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8)* @string_of_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @string_of_type(i8 zeroext %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = zext i8 %4 to i32
  switch i32 %5, label %86 [
    i32 197, label %6
    i32 192, label %7
    i32 151, label %8
    i32 132, label %9
    i32 129, label %10
    i32 152, label %11
    i32 133, label %12
    i32 164, label %13
    i32 136, label %14
    i32 172, label %15
    i32 170, label %16
    i32 181, label %17
    i32 177, label %18
    i32 176, label %19
    i32 169, label %20
    i32 175, label %21
    i32 153, label %22
    i32 135, label %23
    i32 160, label %24
    i32 171, label %25
    i32 179, label %26
    i32 162, label %27
    i32 147, label %28
    i32 156, label %29
    i32 188, label %30
    i32 190, label %31
    i32 186, label %32
    i32 198, label %33
    i32 150, label %34
    i32 166, label %35
    i32 149, label %36
    i32 165, label %37
    i32 193, label %38
    i32 187, label %39
    i32 199, label %40
    i32 206, label %41
    i32 205, label %42
    i32 204, label %43
    i32 158, label %44
    i32 185, label %45
    i32 184, label %46
    i32 189, label %47
    i32 128, label %48
    i32 196, label %49
    i32 138, label %50
    i32 154, label %51
    i32 167, label %52
    i32 202, label %53
    i32 201, label %54
    i32 200, label %55
    i32 203, label %56
    i32 194, label %57
    i32 146, label %58
    i32 145, label %59
    i32 144, label %60
    i32 143, label %61
    i32 142, label %62
    i32 141, label %63
    i32 140, label %64
    i32 148, label %65
    i32 161, label %66
    i32 173, label %67
    i32 130, label %68
    i32 174, label %69
    i32 131, label %70
    i32 157, label %71
    i32 180, label %72
    i32 183, label %73
    i32 182, label %74
    i32 163, label %75
    i32 207, label %76
    i32 139, label %77
    i32 195, label %78
    i32 191, label %79
    i32 178, label %80
    i32 159, label %81
    i32 134, label %82
    i32 155, label %83
    i32 168, label %84
    i32 137, label %85
  ]

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %89

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %89

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %89

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %89

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %89

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %89

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %89

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %89

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %89

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %89

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %89

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %89

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %89

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %89

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %89

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %89

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %89

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %89

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %89

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %89

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %89

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %89

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %89

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %89

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %89

31:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.25, i64 0, i64 0), i8** %2, align 8
  br label %89

32:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.26, i64 0, i64 0), i8** %2, align 8
  br label %89

33:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.27, i64 0, i64 0), i8** %2, align 8
  br label %89

34:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.28, i64 0, i64 0), i8** %2, align 8
  br label %89

35:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.29, i64 0, i64 0), i8** %2, align 8
  br label %89

36:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.30, i64 0, i64 0), i8** %2, align 8
  br label %89

37:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.31, i64 0, i64 0), i8** %2, align 8
  br label %89

38:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.32, i64 0, i64 0), i8** %2, align 8
  br label %89

39:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.33, i64 0, i64 0), i8** %2, align 8
  br label %89

40:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.34, i64 0, i64 0), i8** %2, align 8
  br label %89

41:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %89

42:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.36, i64 0, i64 0), i8** %2, align 8
  br label %89

43:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.37, i64 0, i64 0), i8** %2, align 8
  br label %89

44:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.38, i64 0, i64 0), i8** %2, align 8
  br label %89

45:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.39, i64 0, i64 0), i8** %2, align 8
  br label %89

46:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.40, i64 0, i64 0), i8** %2, align 8
  br label %89

47:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.41, i64 0, i64 0), i8** %2, align 8
  br label %89

48:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.42, i64 0, i64 0), i8** %2, align 8
  br label %89

49:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.43, i64 0, i64 0), i8** %2, align 8
  br label %89

50:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.44, i64 0, i64 0), i8** %2, align 8
  br label %89

51:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.45, i64 0, i64 0), i8** %2, align 8
  br label %89

52:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.46, i64 0, i64 0), i8** %2, align 8
  br label %89

53:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.47, i64 0, i64 0), i8** %2, align 8
  br label %89

54:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.48, i64 0, i64 0), i8** %2, align 8
  br label %89

55:                                               ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.49, i64 0, i64 0), i8** %2, align 8
  br label %89

56:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.50, i64 0, i64 0), i8** %2, align 8
  br label %89

57:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.51, i64 0, i64 0), i8** %2, align 8
  br label %89

58:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.52, i64 0, i64 0), i8** %2, align 8
  br label %89

59:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.53, i64 0, i64 0), i8** %2, align 8
  br label %89

60:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.54, i64 0, i64 0), i8** %2, align 8
  br label %89

61:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.55, i64 0, i64 0), i8** %2, align 8
  br label %89

62:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.56, i64 0, i64 0), i8** %2, align 8
  br label %89

63:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.57, i64 0, i64 0), i8** %2, align 8
  br label %89

64:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.58, i64 0, i64 0), i8** %2, align 8
  br label %89

65:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.59, i64 0, i64 0), i8** %2, align 8
  br label %89

66:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.60, i64 0, i64 0), i8** %2, align 8
  br label %89

67:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.61, i64 0, i64 0), i8** %2, align 8
  br label %89

68:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.62, i64 0, i64 0), i8** %2, align 8
  br label %89

69:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.63, i64 0, i64 0), i8** %2, align 8
  br label %89

70:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.64, i64 0, i64 0), i8** %2, align 8
  br label %89

71:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.65, i64 0, i64 0), i8** %2, align 8
  br label %89

72:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.66, i64 0, i64 0), i8** %2, align 8
  br label %89

73:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.67, i64 0, i64 0), i8** %2, align 8
  br label %89

74:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.68, i64 0, i64 0), i8** %2, align 8
  br label %89

75:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.69, i64 0, i64 0), i8** %2, align 8
  br label %89

76:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.70, i64 0, i64 0), i8** %2, align 8
  br label %89

77:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.71, i64 0, i64 0), i8** %2, align 8
  br label %89

78:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.72, i64 0, i64 0), i8** %2, align 8
  br label %89

79:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.73, i64 0, i64 0), i8** %2, align 8
  br label %89

80:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.74, i64 0, i64 0), i8** %2, align 8
  br label %89

81:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.75, i64 0, i64 0), i8** %2, align 8
  br label %89

82:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.76, i64 0, i64 0), i8** %2, align 8
  br label %89

83:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.77, i64 0, i64 0), i8** %2, align 8
  br label %89

84:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.78, i64 0, i64 0), i8** %2, align 8
  br label %89

85:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.79, i64 0, i64 0), i8** %2, align 8
  br label %89

86:                                               ; preds = %1
  %87 = load i8, i8* %3, align 1
  %88 = call i32 @error(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.80, i64 0, i64 0), i8 zeroext %87)
  store i8* null, i8** %2, align 8
  br label %89

89:                                               ; preds = %86, %85, %84, %83, %82, %81, %80, %79, %78, %77, %76, %75, %74, %73, %72, %71, %70, %69, %68, %67, %66, %65, %64, %63, %62, %61, %60, %59, %58, %57, %56, %55, %54, %53, %52, %51, %50, %49, %48, %47, %46, %45, %44, %43, %42, %41, %40, %39, %38, %37, %36, %35, %34, %33, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6
  %90 = load i8*, i8** %2, align 8
  ret i8* %90
}

declare dso_local i32 @error(i8*, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
